# controller/subscriptionController.go
@@ -1,0 +1,39 @@
+package controller
+
+import (
+	"database/sql"
+	"net/http"
+	"github.com/gin-gonic/gin"
+	"github.com/nhatflash/fbchain/api"
+	"github.com/nhatflash/fbchain/client"
+	"github.com/nhatflash/fbchain/service"
+	_ "github.com/nhatflash/fbchain/docs"
+)
+
+type SubscriptionController struct {
+	Db		*sql.DB
+}
+
+
+// @Summary Create subscription API
+// @Accept json
+// @Produce json
+// @Param request body client.CreateSubscriptionRequest true "CreateSubscription body"
+// @Success 201 {object} client.SubscriptionResponse
+// @Failure 400 {object} error
+// @Security BearerAuth
+// @Router /admin/subscription [post]
+func (sc SubscriptionController) CreateSubscription(c *gin.Context) {
+	var createSubscriptionReq client.CreateSubscriptionRequest
+
+	if reqErr := c.ShouldBindJSON(&createSubscriptionReq); reqErr != nil {
+		c.Error(reqErr)
+		return
+	}
+	res, resErr := service.HandleCreateSubscription(&createSubscriptionReq, sc.Db)
+	if resErr != nil {
+		c.Error(resErr)
+		return
+	}
+	api.SuccessMessage(http.StatusCreated, "Subscription created successfully.", res, c)
+}
